objects/Classroom__c.object
<CustomObject>
    <label>Classroom</label>
    <nameField>
        <label>Classroom Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Classrooms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Topics__c</fullName>
        <label>Topics</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mode_of__c</fullName>
        <label>Mode of Training</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Offline</fullName>
                </value>
                <value>
                    <fullName>Online</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Student__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Student</label>
        <referenceTo>Student__c</referenceTo>
        <relationshipLabel>Classrooms</relationshipLabel>
        <relationshipName>Classrooms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Trainer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Trainer</label>
        <referenceTo>Trainer__c</referenceTo>
        <relationshipLabel>Classrooms</relationshipLabel>
        <relationshipName>Classrooms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assignment__c</fullName>
        <label>Assignment</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Login_Date__c</fullName>
        <label>Login Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Login_Time__c</fullName>
        <label>Login Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>Logout_Date__c</fullName>
        <label>Logout Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Logout_Time__c</fullName>
        <label>Logout Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>Course_Detail__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Course Detail</label>
        <referenceTo>Course__c</referenceTo>
        <relationshipLabel>Classrooms</relationshipLabel>
        <relationshipName>Classrooms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Batch_Assigned__c</fullName>
        <label>Batch Assigned</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Batch1</fullName>
                </value>
                <value>
                    <fullName>Batch2</fullName>
                </value>
                <value>
                    <fullName>Batch3</fullName>
                </value>
                <value>
                    <fullName>Batch4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Duration_of_Class__c</fullName>
        <label>Duration of Class</label>
        <length>18</length>
        <type>Text</type>
    </fields>
</CustomObject>